--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
   },
   "devDependencies": {
     "@testing-library/user-event": "^14.6.1",
+    "@types/axios-mock-adapter": "^1.9.0",
     "@types/jest": "^30.0.0",
     "@types/react-fontawesome": "^1.6.8",
+    "axios-mock-adapter": "^2.1.0",
     "vite": "^7.0.6"
   }
 }
